# rutify

./: .gitignore  Cargo.toml  Cargo.toml.backup  README.md  README_SDK.md  README_WORKSPACE.md  request.http
docs/: PROJECT_STATUS.md
docs_issue/: waiting_user__Q20260301-01__API删除接口缺少鉴权.md
slint/: app.slint
src/: app.rs  error.rs  lib.rs  main.rs  payload.rs  state.rs
src/db/: initialize.rs  mod.rs  notifies.rs  tokens.rs
src/db/migration/: mod.rs
src/routes/: mod.rs  notify.rs  ws.rs
src/sdk/: client.rs  types.rs
